ultimas mejoras del blog cobra kai

--- a/dojo.html
+++ b/dojo.html
@@ -64,9 +64,10 @@
     <br /><br />
     <section>
       <div class="container text-white-50">
-        <h1 class="alegreya text-uppercase text-center">Cobra Kai</h1><br>
-        <p class="text-center">Esto es lo que debes saber sobre Cobra Kai, la serie basada en la franquicia de karate que gozó de gran fama en la década de los 80.</p><br>
-        <hr/><br>
+        <div class="text-center">
+          <h1 class="alegreya text-uppercase text-center">Cobra Kai</h1>
+          <cite class="text-center">Esto es lo que debes saber sobre Cobra Kai, la serie basada en la franquicia de karate que gozó de gran fama en la década de los 80.</cite><br><br><hr>
+        </div>
         <div class="row p-2">
           <div class="col-md-8 text-justify">
             <article>
@@ -79,26 +80,28 @@
             <img src="img/Dojo_Cobra_Kai.jpg" alt="" />
           </div>
         </div>
-          <br><h3 class="alegreya text-uppercase">Sinopsis</h3><br>
+        <div class="p-2">
+          <br>
+          <h3 class="alegreya text-uppercase">Sinopsis</h3>
             <div class="text-justify">
               Han pasado 30 años desde aquel campeonato de 1984. Johnny Lawrence no se encuentra en el mejor momento de su vida, por lo que decide abrir el Dojo Cobra Kai para retomar el camino. Esta aventura lo vuelve a enfrentar con su anterior rival, Daniel LaRusso, quien ahora tiene gran éxito en otros negocios. Pese a ello, ambos se encuentran en el mismo camino de querer encontrar el equilibrio en sus vidas.
             </div>
             <br>
             <hr>
-        <br />
+         </div>
         <div class="row p-2">
           <div class="col-md-8 clearfix text-justify">
-            <h2 class="text-center">Juguemos un poco!!!</h2>
+            <h2 class="text-center alegreya text-uppercase">Juguemos ...</h2>
             <br />
-            <p class="text-center">Pon tu nombre: <input type="text" id="nombre" /></p>
+            <p class="text-center">Pon tu nombre <input type="text" id="nombre" /></p>
             <br><br>
             <h4>De quién es la frase ...</h4>
             <cite>
               "Mira, a mí no me enseñaron la diferencia entre piedad y honor, y pagué el precio. Si soy tan exigente contigo es porque tienes el potencial de ser mejor que yo."</cite>
               <h5 class="text-right"><br>  
-                Johny Lawrence o Daniel Larusso?
+                John Lawrence o Daniel Larusso?
               </h5>
-              <br /><br />
+              <br>
           </div>
           <div class="col-md flex">
             <a onclick="jugar_ahora()">
@@ -107,22 +110,15 @@
             pincha y responde
           </div>
         </div>
+        <br>
         <div class="flex">
           <div class="d-none" id="pre-resultado">
-            <br>
             <h5 id="resultado"></h5>
-            <br>
-            <br>
           </div>
         </div>
-        <div class="d-none" id="biografia">
-            <h3 class="alegreya text-uppercase">Reparto</h3><br>
-            <div class="text-justify">
-              Al frente del cast aparecen William Zabka, como Johnny Lawrence, y Ralph Macchio, como Daniel LaRusso. Asimismo, la serie toma como personajes principales a Xolo Maridueña, como Miguel Díaz; Mary Mouser, como Samantha LaRusso; Peyton List, como Tory; Tanner Buchannan, como Robby Keene, y Courtney Henggeler, como Amanda LaRusso.
-
-              De igual forma, participan los actores Joe Seo, Jacob Bertrand, Nichole Brown, Connor Murdock, Griffin Santopietro, Hannah Kepple, Gabe Bowles, Owen Morgan, Annalisa Cochrane, Gianni Decenzo, Cameron Markeles, Denzel K. Williams, Bo Mitchell, Bret Ernst, Dan Ahdoot y Jonathan Mercedes, entre otros.
-            </div><br><br>
-            <h3 class="alegreya text-uppercase">personajes</h3><br>
+        <div class="d-none" id="tablas">
+          <br><br>
+          <h3 class="alegreya text-uppercase">integrantes cobra kai</h3><br>
           <div class="row">
             <div class="col-md-3">
               <table class="table text-white-50">
@@ -131,7 +127,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Nombre real</th>
+                    <th scope="row">Nombre</th>
                     <td>John Lawrence</td>
                   </tr>
                   <tr>
@@ -177,7 +173,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Nombre real</th>
+                    <th scope="row">Nombre</th>
                     <td>Miguel Diaz</td>
                   </tr>
                   <tr>
@@ -217,7 +213,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Nombre real</th>
+                    <th scope="row">Nombre</th>
                     <td>Tory</td>
                   </tr>
                   <tr>
@@ -246,7 +242,7 @@
                 </thead>
                 <tbody>
                   <tr>
-                    <th scope="row">Nombre real</th>
+                    <th scope="row">Nombre</th>
                     <td>Eli Moskowitz</td>
                   </tr>
                   <tr>
@@ -265,7 +261,7 @@
                   </tr>
                   <tr>
                     <th scope="row">genero</th>
-                    <td>masculino</td>
+                    <td>Masculino</td>
                   </tr>
                   <tr>
                     <th scope="row">Afiliación</th>
@@ -275,17 +271,202 @@
               </table>
             </div>
           </div>
+          <br><br>
+          <h3 class="alegreya text-uppercase">integrantes Miyagi-Do</h3><br>
+          <div class="row">
+            <div class="col-md-3">
+              <table class="table text-white-50">
+                <thead>
+                  <img src="img/Daniel_LaRusso.png" id="foto_tabla" />
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Nombre</th>
+                    <td>Daniel LaRusso</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Apodo(s)</th>
+                    <td>Daniel-san</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacionalidad</th>
+                    <td>Estadounidense</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Familia</th>
+                    <td>
+                      Lucille LaRusso (madre) <br>
+                      Louie LaRusso Sr. (tío) <br>
+                      Louie LaRusso, Jr. (primo) <br>
+                      Amanda LaRusso (esposa) <br>
+                      Samantha LaRusso (hija) <br>
+                      Anthony LaRusso (hijo) <br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacimiento</th>
+                    <td>18 de diciembre de 1966</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Edad</th>
+                    <td>53 años</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Ocupación</th>
+                    <td>
+                      Instructor de Karate <br>
+                      Dueño de Auto Grupo LaRusso <br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Afiliación</th>
+                    <td>
+                      Miyagi-Do Karate <br>
+                      Auto Grupo LaRusso <br>
+                    </td>
+                    <td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-md-3">
+              <table class="table text-white-50">
+                <thead>
+                  <img src="img/Samantha_LaRusso.png" id="foto_tabla" />
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Nombre</th>
+                    <td>Samantha LaRusso</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Apodo(s)</th>
+                    <td>Sam</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacionalidad</th>
+                    <td>Ecuatoriano, Estadounidense</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Familia</th>
+                    <td>
+                      Lucille LaRusso (abuela) <br>
+                      Louie LaRusso Sr. (tío abuelo) <br>
+                      Louie LaRusso, Jr. (tío) <br>
+                      Daniel LaRusso (padre) <br>
+                      Amanda LaRusso (madre) <br>
+                      Anthony LaRusso (hermano) <br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacimiento</th>
+                    <td>Verano de 2002</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Edad</th>
+                    <td>17 años</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Genero</th>
+                    <td>Femenino</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Afiliación</th>
+                    <td>Miyagi-Do Karate</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-md-3">
+              <table class="table text-white-50">
+                <thead>
+                  <img src="img/Robby_Keene.jpg" id="foto_tabla" />
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Nombre</th>
+                    <td>Robert Swazye Keene</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Apodo(s)</th>
+                    <td>Robby</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Familia</th>
+                    <td>
+                      John Lawrence (padre) <br> 
+                      Laura Lawrence (abuelo) <br>
+                      Sid Weinberg (abuelastro) <br> 
+                      Shannon Keene (madre) <br>
+                    </td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacionalidad</th>
+                    <td>Estadounidense</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacimiento</th>
+                    <td>4 de febrero de 2002</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Genero</th>
+                    <td>Masculino</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Edad</th>
+                    <td>17 años</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Afiliación</th>
+                    <td>Miyagi-Do Karate</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+            <div class="col-md-3">
+              <table class="table text-white-50">
+                <thead>
+                  <img src="img/Demetri.png" id="foto_tabla" />
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row">Nombre</th>
+                    <td>Demetri</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Nacionalidad</th>
+                    <td>Estadounidense</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">genero</th>
+                    <td>Masculino</td>
+                  </tr>
+                  <tr>
+                    <th scope="row">Afiliación</th>
+                    <td>Miyagi-Do Karate</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+          <hr>
+          <br>
+          <h3 class="alegreya text-uppercase">Reparto</h3>
+            <div class="text-justify">
+              Al frente del cast aparecen William Zabka, como Johnny Lawrence, y Ralph Macchio, como Daniel LaRusso. Asimismo, la serie toma como personajes principales a Xolo Maridueña, como Miguel Díaz; Mary Mouser, como Samantha LaRusso; Peyton List, como Tory; Tanner Buchannan, como Robby Keene, y Courtney Henggeler, como Amanda LaRusso.
+
+              De igual forma, participan los actores Joe Seo, Jacob Bertrand, Nichole Brown, Connor Murdock, Griffin Santopietro, Hannah Kepple, Gabe Bowles, Owen Morgan, Annalisa Cochrane, Gianni Decenzo, Cameron Markeles, Denzel K. Williams, Bo Mitchell, Bret Ernst, Dan Ahdoot y Jonathan Mercedes, entre otros.
+            </div>
         </div>
       </div>
-      <br /><br />
     </section>
+    <br>
     <footer>
       <br>
       <p class="alegreya text-center text-white-50">
-      &copy; 2020 all rights reserved
-      </p>
-      <br>
+      &copy; 2020 all rights reserved</p><br>
     </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
       integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
