--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
         </div>
       </nav>
       <audio autoplay>
-        <source src="./sound/back_in_black.mp3" type="audio/mp3" />
+        <source src="./sound/Quiver.mp3" type="audio/mp3" />
       </audio>
     </header>
-    <section style="text-align: center">
+    <section id="section" style="text-align: center">
       <article>
-        <br><br><br>
         <img class="animado" src="img/789647.png" alt="" />
-        <br><br><br><br><br>
+        <br><br>
       </article>
       <a
         href="https://www.netflix.com/ar/Login"
