--- a/inscripcion.html
+++ b/inscripcion.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
-  <body style="background-color: black;">
+  <body>
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-dark alegreya sticky-top"
@@ -62,13 +62,13 @@
       </nav>
       <div class="flex" style="height: 190%">
         <br>
-        <h2 class="text-uppercase text-white-50 alegreya">unete a las cobras</h2>
       </div>
     </header>
     <section class="container flex">
       <div class="text-white clearfix">
-        <br /><br /><br /><br />
+        <br>
         <form action="#" class="was-validated">
+          <h2 class="text-uppercase text-white-50 alegreya text-center">unete a las cobras</h2><br>
           <div class="form-group">
             <label for="name">Apellido y Nombres</label>
             <input
