--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
-  <body style="background-color: transparent;">
+  <body style="background-color: black;">
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-dark alegreya sticky-top"
