--- a/inscripcion.html
+++ b/inscripcion.html
@@ -105,9 +105,7 @@
             <textarea
               name="mensaje"
               id="comentario"
-              class="form-control"
-              required>
-            </textarea>
+              class="form-control" required></textarea>
             <div class="valid-feedback">Ok</div>
             <div class="invalid-feedback">*obligatorio</div>
           </div>
