--- a/inscripcion.html
+++ b/inscripcion.html
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto px-4" style="font-size: 1.7rem">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
@@ -53,9 +53,6 @@
           </ul>
         </div>
       </nav>
-      <div class="flex" style="height: 190%">
-        <br>
-      </div>
     </header>
     <section class="container flex">
       <div class="text-white clearfix">
@@ -119,9 +116,8 @@
     </section>
     <footer class="container text-center">
       <hr>
-      <br>
       <p class="long_cang text-center text-white-50">
-      &copy; 2020 all rights reserved</p><br>
+      &copy; 2020 all rights reserved</p>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
