--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css2?family=Long+Cang&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/icono.png" />
+    <link rel="icon" href="img/puño.png" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto px-4" style="font-size: 1.7rem">
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="index.html">Inicio</a>
             </li>
             <li class="nav-item">
@@ -57,14 +57,12 @@
     <section id="section" style="text-align: center">
       <article class="container">
         <img class="animado" src="img/789647.png" alt="" />
-        <br><br><br>
       </article>
     </section>
     <footer class="container text-center">
       <hr>
-      <br>
       <p class="long_cang text-center text-white-50">
-      &copy; 2020 all rights reserved</p><br>
+      &copy; 2020 all rights reserved</p>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
