--- a/inscripcion.html
+++ b/inscripcion.html
@@ -13,7 +13,7 @@
       crossorigin="anonymous"
     />
     <link href="https://fonts.googleapis.com/css2?family=Long+Cang&display=swap" rel="stylesheet">
-    <link rel="icon" href="img/icono.png" />
+    <link rel="icon" href="img/puño.png" />
     <link rel="stylesheet" href="./css/style.css" />
     <title>Cobra Kai</title>
   </head>
